--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -314,8 +314,7 @@
     "no commit comments for this range": "在此范围内没有提交评论",
     "no new commits yet. enjoy your day!": "尚无新提交。祝您愉快！",
     "no new commits to fetch. enjoy your day!": "尚无新提交。祝您愉快！",
-    "fetch and merge": "获取并合并",
-
+    "fetch and merge": "获取合并",
 
     "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
