--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -270,7 +270,7 @@
     "merge pull request": "合并拉取请求",
     "switch branches/tags": "切换分支/标签",
     "default": "默认",
-    "go to file": "文件查找",
+    "go to file": "文件查找文件查找",
     "used by": "使用者",
     "contributor": "贡献者",
     "contributors": "贡献者",
@@ -314,7 +314,7 @@
     "no commit comments for this range": "在此范围内没有提交评论",
     "no new commits yet. enjoy your day!": "尚无新提交。祝您愉快！",
     "no new commits to fetch. enjoy your day!": "尚无新提交。祝您愉快！",
-    "fetch and merge": "获取合并",
+    "fetch and merge": "获取并合并",
 
     "__comments-pull-request": "Repository pull request",
     "pull request": "拉取请求",
